--- a/src/App.css
+++ b/src/App.css
@@ -19,20 +19,30 @@ body {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  background-color: rgb(151, 12, 12);
+  background-color: rgb(189, 32, 32);
   border-radius: 0px 0px 5px 5px;
-  height: 10%;
+  width: 100%;
+}
+
+.logo {
+  height: 70px;
+  width: 60px;
+  z-index: 30;
 }
 
 .titel {
   margin: 20px;
 }
 .users-btn {
-  margin: 20px;
+  margin-right: 20px;
+  height: 70%;
+  width: 70%;
+  color: whitesmoke;
 }
 
 .logged-in {
   margin: 20px;
+  color: whitesmoke;
 }
 
 .head {
@@ -94,10 +104,11 @@ body {
   text-align: center;
   border-top-style: solid;
   border-top-color: rgb(69, 91, 150);
-  position: sticky;
+  position: fixed;
   bottom: 0;
-  background-color: rgb(68, 68, 68);
+  background-color: rgb(22, 21, 21);
   border-radius: 5px 5px 0px 0px;
+  width: 98%;
 }
 
 .sort-by-buttons {
@@ -107,7 +118,8 @@ body {
 }
 
 .nav h4 {
-  height: 10px;
+  height: 0px;
+  font-weight: lighter;
 }
 
 .button1 {
@@ -116,6 +128,8 @@ body {
   border-radius: 5px;
   background-color: rgb(69, 91, 150);
   color: whitesmoke;
+  margin: 5px;
+  font-size: 25px;
 }
 .button2 {
   flex: 1;
@@ -123,6 +137,8 @@ body {
   border-radius: 5px;
   background-color: rgb(69, 91, 150);
   color: whitesmoke;
+  margin: 5px;
+  font-size: 25px;
 }
 .button3 {
   flex: 1;
@@ -130,6 +146,8 @@ body {
   border-radius: 5px;
   background-color: rgb(69, 91, 150);
   color: whitesmoke;
+  margin: 5px;
+  font-size: 25px;
 }
 
 .nav h4 {
