--- a/src/App.css
+++ b/src/App.css
@@ -62,8 +62,11 @@ body {
 }
 
 .article-title-div {
-  background-color: rgb(143, 97, 97);
+  background-color: rgb(218, 67, 67);
   border-radius: 5px;
+}
+.article-des-div {
+  color: lightblue;
 }
 
 .comments {
@@ -235,8 +238,8 @@ body {
   background-color: rgb(56, 55, 55);
   border-radius: 15px;
   border: 3px lightblue solid;
-  margin: 10px;
-  padding: 10px;
+  margin: 7%;
+  padding: 5%;
 }
 
 .comments {
@@ -294,12 +297,66 @@ body {
 }
 
 .user-img {
-  height: 100%;
-  width: 100%;
+  height: 50%;
+  width: 50%;
   object-fit: cover;
   border-radius: 15px;
 }
 
+.button {
+  background-color: rgb(224, 62, 62); /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 5px;
+}
+
+.add-comment {
+  background-color: rgb(56, 55, 55);
+  border-radius: 15px;
+  padding: 5px;
+  margin: 10px;
+}
+
+.posted-in {
+  color: lightblue;
+}
+
+.filteres-btn {
+  color: whitesmoke;
+}
+
+.topics-title {
+  color: lightblue;
+}
+
+.profile-page {
+  border: 5px lightblue solid;
+  border-radius: 15px;
+  background-color: whitesmoke;
+  padding: 10px;
+  margin: 20px;
+}
+
+.profile-pic img {
+  border: 2px black solid;
+  border-radius: 15px;
+  padding: 10px;
+  background-color: white;
+}
+
+.loader {
+  color: whitesmoke;
+  font-weight: bold;
+}
+
+.topics-h1 {
+  color: whitesmoke;
+}
 /* 
 .App-logo {
   height: 40vmin;
