--- a/src/App.css
+++ b/src/App.css
@@ -156,6 +156,9 @@ body {
   cursor: pointer;
   overflow: hidden;
   outline: none;
+  border: 3px rgb(86, 108, 116) solid;
+  border-radius: 15px;
+  background-color: rgb(66, 66, 92);
 }
 .button2 {
   flex: 1;
@@ -171,6 +174,9 @@ body {
   cursor: pointer;
   overflow: hidden;
   outline: none;
+  border: 3px rgb(86, 108, 116) solid;
+  border-radius: 15px;
+  background-color: rgb(66, 66, 92);
 }
 .button3 {
   flex: 1;
@@ -186,6 +192,9 @@ body {
   cursor: pointer;
   overflow: hidden;
   outline: none;
+  border: 3px rgb(86, 108, 116) solid;
+  border-radius: 15px;
+  background-color: rgb(66, 66, 92);
 }
 
 .nav h4 {
